--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 		<link rel="stylesheet" href="main.css" />
 	</head>
 	<body id="top">
-		<h1>'I just see squirrel and birds all day at jerz.'</hi>
+		<div id="main"><h1>'I just see squirrel and birds all day at jerz.'</hi></div>
 	</body>
 </html>
