--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 		<link rel="stylesheet" href="main.css" />
 	</head>
 	<body id="top">
-		<div id="main"><h1>'I just see squirrel and birds all day at jerz.'</hi></div>
+		<div id="main">
+      <h1>'I just see squirrel and birds all day at jerz.'</h1>
+      <h1>'I just see <span style='color:red;text-decoration:line-through'><span style='color:black'>squirrel</span></span> <span style='color:red'>squirrels</span> and birds all day <span style='color:red;text-decoration:line-through'><span style='color:black'>at jerz</span></span> <span style='color:red'> in New Jersey</span>.'</h1>
+    </div>
 	</body>
 </html>
