--- a/index.html
+++ b/index.html
@@ -1,16 +1,13 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>it's worst</title>
+		<title>no</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="main.css" />
 	</head>
 	<body id="top">
 		<div id="main">
-			<div id="image"><img src="http://i.giphy.com/n4nuenh5vcfcI.gif"></div>
-			<h1>'I just see squirrel and birds all day at jerz.'</h1>
-      <h1>'I just see <span style='color:red;text-decoration:line-through'><span style='color:black'>squirrel</span></span> <span style='color:red'>squirrels</span> and birds all day <span style='color:red;text-decoration:line-through'><span style='color:black'>at jerz</span></span> <span style='color:red'> in New Jersey</span>.'</h1>
-    </div>
+			<h1>no</h1>
+	        </div>
 	</body>
 </html>
